<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:orientation="horizontal" >

        <Switch
            android:id="@+id/serial_switch"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textOff="@string/closed"
            android:textOn="@string/opened" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/device" />

        <Spinner
            android:id="@+id/devices"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:prompt="@string/device"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/baudrate" />

        <Spinner
            android:id="@+id/baudrates"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/baudrates"
            android:gravity="center"
            android:prompt="@string/baudrate"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dip"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/send" />

            <EditText
                android:id="@+id/send_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/send_hint" />

            <Button
                android:id="@+id/send_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onSendClick"
                android:text="@string/send" >
            </Button>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/send_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onSendClear"
                android:text="@string/clear" />
        </LinearLayout>

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/received" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/received_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onReceiveClear"
                android:text="@string/clear" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>